fixed overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,7 @@ h4 {
 .deal {
   background-color: rgb(250, 250, 250, 0.3);
   width: 230px;
+  max-width: 350px;
   height: 20px;
   border-radius: 50px;
   padding: 0.15rem;
